--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "grunt-contrib-jshint": "~0.6.2",
     "grunt-contrib-less": "~0.8.1",
     "grunt": "~0.4.0",
-    "grunt-contrib-watch": "~0.5.3"
+    "grunt-contrib-watch": "~0.5.3",
+    "grunt-contrib-concat": "~0.3.0",
+    "grunt-contrib-clean": "~0.5.0"
   }
 }
