updated laravel to 4.1

--- a/.gitignore
+++ b/.gitignore
@@ -4,9 +4,9 @@
 CONTRIBUTING.md
 
 # Configuration
+/app/config/app.php
 /app/config
 /app/config/local
-/app/config/staging
 /app/config/production
 
 # Database
