removed passwords from database seeder and app

--- a/.gitignore
+++ b/.gitignore
@@ -2,9 +2,9 @@
 /bootstrap/compiled.php
 /vendor
 CONTRIBUTING.md
+/app/storage
 
 # Database
-/app/database/
 .env.local.php
 .env.production.php
 
