start of the shopping branch, adding some views/routes/testing stripe

--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,9 @@
 	"require": {
 		"laravel/framework": "4.1.*",
 		"rmccue/requests": ">=1.0",
-		"roumen/sitemap": "dev-master"
+		"roumen/sitemap": "dev-master",
+		"abodeo/laravel-stripe": "dev-master",
+		"gloudemans/shoppingcart": "dev-master"
 	},
 	"autoload": {
 		"classmap": [
