stubbed out php code for color palette selecting. Created migration, need to backfill every post with serialized string of colors in DB to be viewed in detail.blade.php

--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
 		"rmccue/requests": ">=1.0",
 		"roumen/sitemap": "dev-master",
 		"abodeo/laravel-stripe": "dev-master",
-		"gloudemans/shoppingcart": "dev-master"
+		"gloudemans/shoppingcart": "dev-master",
+		"league/color-extractor": "0.1.*"
 	},
 	"autoload": {
 		"classmap": [
